# mac-monitor-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
src/: monitor.py
src/mac_monitor/: __init__.py  monitor.py
